dpms/wayland: Explicitly set as unsupported if addRegistryListener didn't find the interface

If a org_kde_kwin_dpms_manager wasn't found, setSupported(false) so that
the user gets closure.

BUG: 466181


(cherry picked from commit 160fff73b6c8e4f2d8cb8141d9c8c53f0b008eaf)