src/libdpms/waylanddpmshelper.cpp
@@ -166,7 +166,10 @@ void WaylandDpmsHelper::trigger(KScreen::Dpms::Mode mode, const QList<QScreen *>
     setHasPendingChanges(false);
 }
 
-void WaylandDpmsHelper::blockUntilSupported() const
+void WaylandDpmsHelper::blockUntilSupported()
 {
     QMetaObject::invokeMethod(m_dpmsManager, "addRegistryListener");
+    if (!m_dpmsManager->isActive()) {
+        setSupported(false);
+    }
 }
